dom/webidl/CommandEvent.webidl
@@ -4,6 +4,7 @@
  * You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 
+[Func="IsChromeOrXBL"]
 interface CommandEvent : Event {
   readonly attribute DOMString? command;
 
