testing/talos/talos/scripts/MozillaFileLogger.js
@@ -9,11 +9,10 @@ function contentDispatchEvent(type, data, sync) {
     data = {};
   }
 
-  var element = document.createEvent("datacontainerevent");
-  element.initEvent("contentEvent", true, false);
-  element.setData("sync", sync);
-  element.setData("type", type);
-  element.setData("data", JSON.stringify(data));
+  var element = new CustomEvent("contentEvent", {
+    bubbles: true,
+    detail: { sync: sync, type: type, data: JSON.stringify(data) }
+  });
   document.dispatchEvent(element);
 }
 
